--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -10,7 +10,9 @@
         <link rel="stylesheet" href="book.css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
-        
+
+        {{ chapters }}
+
         <script src="book.js"></script>
     </body>
 </html>
