--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -8,10 +8,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="book.css" media="screen" title="no title" charset="utf-8">
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     </head>
     <body>
 
-        {{ chapters }}
+        <div id="sidebar" class="sidebar">
+            <ul class="chapter">
+                {{#each chapters}}
+                    <li><a href="{{ this.chapter.path }}">
+                        <strong>{{ this.section }}</strong> {{ this.chapter.name }}
+                    </a></li>
+                {{/each}}
+            </ul>
+        </div>
+
+        <div id="page-wrapper" class="page-wrapper">
+
+            <div id="menu-bar" class="menu-bar"></div>
+
+            <div id="page" class="page">
+                {{{ content }}}
+            </div>
+
+        </div>
 
         <script src="book.js"></script>
     </body>
