Rough implementation for handlebars helper to display toc correctly, probably needs a little bit of cleaning... Url in toc doesn't work yet. It needs to be cleaned before './url' -> '/url' and 'url' -> '/url'

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -14,13 +14,7 @@
     <body>
 
         <div id="sidebar" class="sidebar">
-            <ul class="chapter">
-                {{#each chapters}}
-                    <li><a href="{{ this.chapter.path }}">
-                        <strong>{{ this.section }}</strong> {{ this.chapter.name }}
-                    </a></li>
-                {{/each}}
-            </ul>
+            {{#toc chapters}}{{/toc}}
         </div>
 
         <div id="page-wrapper" class="page-wrapper">
