Added function to clean links before inserting in toc

--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -89,8 +89,19 @@ html, body {
 }
 
 .chapter li a:hover {
+    /* Animate color change */
     color: #008cff;
     text-decoration: none;
+}
+
+.menu-bar {
+    height: 50px;
+    color: #CCC;
+}
+
+.menu-bar :hover {
+    /* Animate color change */
+    color: #333;
 }
 
 pre {
