--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -19,7 +19,10 @@
 
         <div id="page-wrapper" class="page-wrapper">
 
-            <div id="menu-bar" class="menu-bar"></div>
+            <div id="menu-bar" class="menu-bar">
+                <i class="fa fa-bars left"></i>
+                <h1 class="menu-title">{{ title }}</h1>
+            </div>
 
             <div id="page" class="page">
                 {{{ content }}}
