--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -20,7 +20,7 @@
         <div id="page-wrapper" class="page-wrapper">
 
             <div id="menu-bar" class="menu-bar">
-                <i class="fa fa-bars left"></i>
+                <i id="sidebar-toggle" class="fa fa-bars left"></i>
                 <h1 class="menu-title">{{ title }}</h1>
             </div>
 
@@ -30,6 +30,7 @@
 
         </div>
 
+        <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
         <script src="book.js"></script>
     </body>
 </html>
