Cleaned up the handlebars helpers, it's a lot more customizable because the user can put whatever template he wants inside and I just expose link and name of previous / next chapter. JavaScript part is removed. #26

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -42,9 +42,11 @@
             <!-- {{!/if}} -->
 
             <!-- {{!#if (next "")}} -->
-                <a href="{{#next}}{{/next}}" class="nav-chapters next">
+            {{#next}}
+                <a href="{{link}}" class="nav-chapters next">
                     <i class="fa fa-angle-right"></i>
                 </a>
+            {{/next}}
             <!-- {{!/if}} -->
 
         </div>
