--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="{{ path_to_root }}book.css" media="screen" title="no title" charset="utf-8">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="{{ path_to_root }}highlight.css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
 
@@ -52,6 +53,7 @@
         </div>
 
         <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script src="{{ path_to_root }}highlight.js"></script>
         <script src="{{ path_to_root }}book.js"></script>
     </body>
 </html>
