Prevent navigation arrows from collapsing with text on smaller screen. Fix #42

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -29,8 +29,21 @@
                 <div id="content" class="content">
                     {{{ content }}}
                 </div>
-            </div>
 
+                <!-- Mobile navigation buttons -->
+                {{#previous}}
+                    <a href="{{link}}" class="mobile-nav-chapters previous">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
+                {{/previous}}
+
+                {{#next}}
+                    <a href="{{link}}" class="mobile-nav-chapters next">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
+                {{/next}}
+
+            </div>
 
             {{#previous}}
                 <a href="{{link}}" class="nav-chapters previous">
