Added print button + avoid pagebreaks after titles (doesn't work on chrome, should be tested in Firefox)

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -22,8 +22,15 @@
 
             <div class="page">
                 <div id="menu-bar" class="menu-bar">
-                    <i id="sidebar-toggle" class="fa fa-bars left"></i>
+                    <div class="left-buttons">
+                        <i id="sidebar-toggle" class="fa fa-bars left"></i>
+                    </div>
+
                     <h1 class="menu-title">{{ title }}</h1>
+
+                    <div class="right-buttons">
+                        <i id="print-button" class="fa fa-print" title="Print this book"></i>
+                    </div>
                 </div>
 
                 <div id="content" class="content">
