--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -7,10 +7,14 @@
         <meta name="description" content="{% block description %}{% endblock %}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="{{ path_to_root }}book.css">
+        <base href="{{ path_to_root }}">
+
+        <link rel="stylesheet" href="book.css">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="{{ path_to_root }}highlight.css">
+        <link rel="stylesheet" href="highlight.css">
+
+
     </head>
     <body>
 
@@ -67,7 +71,7 @@
         </div>
 
         <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-        <script src="{{ path_to_root }}highlight.js"></script>
-        <script src="{{ path_to_root }}book.js"></script>
+        <script src="highlight.js"></script>
+        <script src="book.js"></script>
     </body>
 </html>
