--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -71,7 +71,14 @@
 
         </div>
 
+        <!-- Fetch JQuery from CDN but have a local fallback -->
         <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+        <script>
+            if (typeof jQuery == 'undefined') {
+                document.write(unescape("%3Cscript src='jquery.js'%3E%3C/script%3E"));
+            }
+        </script>
+
         <script src="highlight.js"></script>
         <script src="book.js"></script>
     </body>
