--- a/src/theme/stylus/general.styl
+++ b/src/theme/stylus/general.styl
@@ -1,12 +1,14 @@
 html, body {
-    font-family: "Open Sans", sans-serif;
-    color: #333;
+    font-family: "Open Sans", sans-serif
+    color: #333
 }
 
 .left {
-    float: left;
+    float: left
 }
 
 .right {
-    float: right;
+    float: right
 }
+
+h2, h3 { margin-top: 2.5em }
