Tweak css for inline code blocks in sidebar

--- a/src/theme/stylus/sidebar.styl
+++ b/src/theme/stylus/sidebar.styl
@@ -18,6 +18,10 @@
     @media only screen and (max-width: 1060px) {
         left: - $sidebar-width
     }
+
+    code {
+        line-height: 2em;
+    }
 }
 
 .sidebar-hidden .sidebar {
