--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -1,160 +1,35 @@
-html,
-body {
+html, body {
   font-family: "Open Sans", sans-serif;
-  color: #333;
-}
+  color: #333; }
+
 .left {
-  float: left;
-}
+  float: left; }
+
 .right {
-  float: right;
-}
+  float: right; }
+
 .hidden {
-  display: none;
-}
-h2,
-h3 {
-  margin-top: 2.5em;
-}
-.sidebar {
-  position: absolute;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  width: 300px;
-  overflow-y: auto;
-  padding: 10px 10px;
-  font-size: 0.875em;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-overflow-scrolling: touch;
-  -webkit-transition: left 0.5s;
-  -moz-transition: left 0.5s;
-  -o-transition: left 0.5s;
-  -ms-transition: left 0.5s;
-  transition: left 0.5s;
-}
-@media only screen and (max-width: 1060px) {
-  .sidebar {
-    left: -300px;
-  }
-}
-.sidebar code {
-  line-height: 2em;
-}
-.sidebar-hidden .sidebar {
-  left: -300px;
-}
-.sidebar-visible .sidebar {
-  left: 0;
-}
-.chapter {
-  list-style: none outside none;
-  padding-left: 0;
-  line-height: 1.9em;
-}
-.chapter li a {
-  padding: 5px 0;
-  text-decoration: none;
-}
-.chapter li a:hover {
-  text-decoration: none;
-}
-.chapter .spacer {
-  width: 100%;
-  height: 3px;
-  margin: 10px 0px;
-}
-.section {
-  list-style: none outside none;
-  padding-left: 20px;
-  line-height: 2.5em;
-}
-.section li {
-  -o-text-overflow: ellipsis;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-}
-.page-wrapper {
-  position: absolute;
-  overflow-y: auto;
-  left: 315px;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-overflow-scrolling: touch;
-  min-height: 100%;
-  -webkit-transition: left 0.5s;
-  -moz-transition: left 0.5s;
-  -o-transition: left 0.5s;
-  -ms-transition: left 0.5s;
-  transition: left 0.5s;
-}
-@media only screen and (max-width: 1060px) {
-  .page-wrapper {
-    left: 15px;
-    padding-right: 15px;
-  }
-}
-.sidebar-hidden .page-wrapper {
-  left: 15px;
-}
-.sidebar-visible .page-wrapper {
-  left: 315px;
-}
-.page {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  padding-right: 15px;
-  overflow-y: auto;
-}
-.content {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 750px;
-  padding-bottom: 50px;
-}
-.content a {
-  text-decoration: none;
-}
-.content a:hover {
-  text-decoration: underline;
-}
-.content img {
-  max-width: 100%;
-}
+  display: none; }
+
+h2, h3 {
+  margin-top: 2.5em; }
+
 .menu-bar {
   position: relative;
-  height: 50px;
-}
-.menu-bar i {
-  position: relative;
-  margin: 0 10px;
-  z-index: 10;
-  line-height: 50px;
-  -webkit-transition: color 0.5s;
-  -moz-transition: color 0.5s;
-  -o-transition: color 0.5s;
-  -ms-transition: color 0.5s;
-  transition: color 0.5s;
-}
-.menu-bar i:hover {
-  cursor: pointer;
-}
-.menu-bar .left-buttons {
-  float: left;
-}
-.menu-bar .right-buttons {
-  float: right;
-}
+  height: 50px; }
+  .menu-bar i {
+    position: relative;
+    margin: 0 10px;
+    z-index: 10;
+    line-height: 50px;
+    transition: color 0.5s; }
+    .menu-bar i:hover {
+      cursor: pointer; }
+  .menu-bar .left-buttons {
+    float: left; }
+  .menu-bar .right-buttons {
+    float: right; }
+
 .menu-title {
   display: inline-block;
   font-weight: 200;
@@ -168,386 +43,400 @@ h3 {
   text-align: center;
   margin: 0;
   opacity: 0;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  filter: alpha(opacity=0);
-  -webkit-transition: opacity 0.5s ease-in-out;
-  -moz-transition: opacity 0.5s ease-in-out;
-  -o-transition: opacity 0.5s ease-in-out;
-  -ms-transition: opacity 0.5s ease-in-out;
-  transition: opacity 0.5s ease-in-out;
-}
+  transition: opacity 0.5s ease-in-out; }
+
 .menu-bar:hover .menu-title {
-  opacity: 1;
-  -ms-filter: none;
-  filter: none;
-}
+  opacity: 1; }
+
 .nav-chapters {
   font-size: 2.5em;
   text-align: center;
   text-decoration: none;
   position: absolute;
-  top: 50px /* Height of menu-bar */;
+  top: 50px;
+  /* Height of menu-bar */
   bottom: 0;
   margin: 0;
   max-width: 150px;
   min-width: 90px;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
   display: flex;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  -o-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
   justify-content: center;
-  -ms-flex-line-pack: center;
-  -webkit-align-content: center;
   align-content: center;
-  -webkit-box-orient: vertical;
-  -moz-box-orient: vertical;
-  -o-box-orient: vertical;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-transition: color 0.5s;
-  -moz-transition: color 0.5s;
-  -o-transition: color 0.5s;
-  -ms-transition: color 0.5s;
-  transition: color 0.5s;
-}
+  transition: color 0.5s; }
+
 .mobile-nav-chapters {
-  display: none;
-}
+  display: none; }
+
 .nav-chapters:hover {
-  text-decoration: none;
-}
+  text-decoration: none; }
+
 .previous {
-  left: 0;
-}
+  left: 0; }
+
 .next {
-  right: 15px;
-}
+  right: 15px; }
+
+.page-wrapper {
+  position: absolute;
+  overflow-y: auto;
+  left: 315px;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  box-sizing: border-box;
+  -webkit-overflow-scrolling: touch;
+  min-height: 100%;
+  transition: left 0.5s; }
+  @media only screen and (max-width: 1060px) {
+    .page-wrapper {
+      left: 15px;
+      padding-right: 15px; } }
+
+.sidebar-hidden .page-wrapper {
+  left: 15px; }
+
+.sidebar-visible .page-wrapper {
+  left: 315px; }
+
+.page {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  padding-right: 15px;
+  overflow-y: auto; }
+
+.content {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 750px;
+  padding-bottom: 50px; }
+  .content a {
+    text-decoration: none; }
+    .content a:hover {
+      text-decoration: underline; }
+  .content img {
+    max-width: 100%; }
+
+@media only print {
+  .sidebar,
+  .menu-bar,
+  .nav-chapters,
+  .mobile-nav-chapters {
+    display: none; }
+  .page-wrapper {
+    left: 0; }
+  .content {
+    max-width: 100%; }
+  code {
+    background-color: #666666;
+    border-radius: 5px;
+    /* Force background to be printed in Chrome */
+    -webkit-print-color-adjust: exact; }
+  a, a:visited, a:active, a:hover {
+    color: #4183c4;
+    text-decoration: none; }
+  h1, h2, h3, h4, h5, h6 {
+    page-break-inside: avoid;
+    page-break-after: avoid;
+    /*break-after: avoid*/ }
+  pre, code {
+    page-break-inside: avoid;
+    white-space: pre-wrap;
+    /* CSS 3 */
+    white-space: -moz-pre-wrap;
+    /* Mozilla, since 1999 */
+    white-space: -pre-wrap;
+    /* Opera 4-6 */
+    white-space: -o-pre-wrap;
+    /* Opera 7 */
+    word-wrap: break-word;
+    /* Internet Explorer 5.5+ */ } }
+
+.sidebar {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  width: 300px;
+  overflow-y: auto;
+  padding: 10px 10px;
+  font-size: 0.875em;
+  box-sizing: border-box;
+  -webkit-overflow-scrolling: touch;
+  transition: ease-out left 0.5s; }
+  @media only screen and (max-width: 1060px) {
+    .sidebar {
+      left: -300px; } }
+  .sidebar code {
+    line-height: 2em; }
+
+.sidebar-hidden .sidebar {
+  left: -300px; }
+
+.sidebar-visible .sidebar {
+  left: 0; }
+
+.chapter {
+  list-style: none outside none;
+  padding-left: 0;
+  line-height: 1.9em; }
+  .chapter li a {
+    padding: 5px 0;
+    text-decoration: none; }
+    .chapter li a:hover {
+      text-decoration: none; }
+  .chapter .spacer {
+    width: 100%;
+    height: 3px;
+    margin: 10px 0px; }
+
+.section {
+  list-style: none outside none;
+  padding-left: 20px;
+  line-height: 2.5em; }
+  .section li {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap; }
+
 .theme-popup {
   position: fixed;
   left: -40px;
-  -webkit-border-radius: 4px;
   border-radius: 4px;
-  font-size: 0.7em;
-}
-.theme-popup .theme {
-  margin: 0;
-  padding: 2px 10px;
-  line-height: 25px;
-  white-space: nowrap;
-}
+  font-size: 0.7em; }
+  .theme-popup .theme {
+    margin: 0;
+    padding: 2px 10px;
+    line-height: 25px;
+    white-space: nowrap; }
+
 @media only screen and (max-width: 1250px) {
   .nav-chapters {
-    display: none;
-  }
+    display: none; }
   .mobile-nav-chapters {
     font-size: 2.5em;
     text-align: center;
     text-decoration: none;
     max-width: 150px;
     min-width: 90px;
-    -webkit-box-pack: center;
-    -moz-box-pack: center;
-    -o-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
     justify-content: center;
-    -ms-flex-line-pack: center;
-    -webkit-align-content: center;
     align-content: center;
     position: relative;
     display: inline-block;
     margin-bottom: 50px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
-  }
+    border-radius: 5px; }
   .next {
-    float: right;
-  }
+    float: right; }
   .previous {
-    float: left;
-  }
-}
+    float: left; } }
+
 .light {
-/* Inline code */
-  color: #333;
-  background-color: #fff;
-}
-.light :not(pre) > .hljs {
-  display: inline-block;
-  vertical-align: middle;
-  padding: 0.1em 0.3em;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-}
-.light pre {
-  position: relative;
-}
-.light pre > i {
-  position: absolute;
-  right: 5px;
-  top: 5px;
-  color: #364149;
-  cursor: pointer;
-}
-.light pre > i :hover {
-  color: #008cff;
-}
-.light .sidebar {
-  background-color: #fafafa;
-  color: #364149;
-}
-.light .chapter li {
-  color: #aaa;
-}
-.light .chapter li a {
-  color: #364149;
-}
-.light .chapter li .active,
-.light .chapter li a:hover {
-/* Animate color change */
-  color: #008cff;
-}
-.light .chapter .spacer {
-  background-color: #f4f4f4;
-}
-.light .menu-bar,
-.light .nav-chapters,
-.light .mobile-nav-chapters {
-  color: #ccc;
-}
-.light .menu-bar i:hover,
-.light .nav-chapters:hover,
-.light .mobile-nav-chapters i:hover {
-  color: #333;
-}
-.light .mobile-nav-chapters i:hover {
-  color: #364149;
-}
-.light .mobile-nav-chapters {
-  background-color: #fafafa;
-}
-.light .content a:link {
-  color: #4183c4;
-}
-.light .theme-popup {
-  background: #fafafa;
-  border: 1px solid #ccc;
-}
-.light .theme-popup .theme:hover {
-  background-color: #e6e6e6;
-}
+  /* Inline code */
+  color: #333333;
+  background-color: #ffffff; }
+  .light :not(  pre) > .hljs {
+    display: inline-block;
+    vertical-align: middle;
+    padding: 0.1em 0.3em;
+    border-radius: 3px; }
+  .light pre {
+    position: relative; }
+  .light pre > i {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    color: #364149;
+    cursor: pointer; }
+    .light pre > i :hover {
+      color: #008cff; }
+  .light .sidebar {
+    background-color: #fafafa;
+    color: #364149; }
+  .light .chapter li {
+    color: #aaaaaa; }
+    .light .chapter li a {
+      color: #364149; }
+    .light .chapter li .active,
+    .light .chapter li a:hover {
+      /* Animate color change */
+      color: #008cff; }
+  .light .chapter .spacer {
+    background-color: #f4f4f4; }
+  .light .menu-bar,
+  .light .nav-chapters,
+  .light .mobile-nav-chapters {
+    color: #cccccc; }
+  .light .menu-bar i:hover,
+  .light .nav-chapters:hover,
+  .light .mobile-nav-chapters i:hover {
+    color: #333333; }
+  .light .mobile-nav-chapters i:hover {
+    color: #364149; }
+  .light .mobile-nav-chapters {
+    background-color: #fafafa; }
+  .light .content a:link {
+    color: #4183c4; }
+  .light .theme-popup {
+    background: #fafafa;
+    border: 1px solid #cccccc; }
+    .light .theme-popup .theme:hover {
+      background-color: #e6e6e6; }
+
 .coal {
-/* Inline code */
+  /* Inline code */
   color: #98a3ad;
-  background-color: #141617;
-}
-.coal :not(pre) > .hljs {
-  display: inline-block;
-  vertical-align: middle;
-  padding: 0.1em 0.3em;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-}
-.coal pre {
-  position: relative;
-}
-.coal pre > i {
-  position: absolute;
-  right: 5px;
-  top: 5px;
-  color: #a1adb8;
-  cursor: pointer;
-}
-.coal pre > i :hover {
-  color: #3473ad;
-}
-.coal .sidebar {
-  background-color: #292c2f;
-  color: #a1adb8;
-}
-.coal .chapter li {
-  color: #505254;
-}
-.coal .chapter li a {
-  color: #a1adb8;
-}
-.coal .chapter li .active,
-.coal .chapter li a:hover {
-/* Animate color change */
-  color: #3473ad;
-}
-.coal .chapter .spacer {
-  background-color: #393939;
-}
-.coal .menu-bar,
-.coal .nav-chapters,
-.coal .mobile-nav-chapters {
-  color: #43484d;
-}
-.coal .menu-bar i:hover,
-.coal .nav-chapters:hover,
-.coal .mobile-nav-chapters i:hover {
-  color: #b3c0cc;
-}
-.coal .mobile-nav-chapters i:hover {
-  color: #a1adb8;
-}
-.coal .mobile-nav-chapters {
-  background-color: #292c2f;
-}
-.coal .content a:link {
-  color: #2b79a2;
-}
-.coal .theme-popup {
-  background: #141617;
-  border: 1px solid #43484d;
-}
-.coal .theme-popup .theme:hover {
-  background-color: #1f2124;
-}
+  background-color: #141617; }
+  .coal :not(  pre) > .hljs {
+    display: inline-block;
+    vertical-align: middle;
+    padding: 0.1em 0.3em;
+    border-radius: 3px; }
+  .coal pre {
+    position: relative; }
+  .coal pre > i {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    color: #a1adb8;
+    cursor: pointer; }
+    .coal pre > i :hover {
+      color: #3473ad; }
+  .coal .sidebar {
+    background-color: #292c2f;
+    color: #a1adb8; }
+  .coal .chapter li {
+    color: #505254; }
+    .coal .chapter li a {
+      color: #a1adb8; }
+    .coal .chapter li .active,
+    .coal .chapter li a:hover {
+      /* Animate color change */
+      color: #3473ad; }
+  .coal .chapter .spacer {
+    background-color: #393939; }
+  .coal .menu-bar,
+  .coal .nav-chapters,
+  .coal .mobile-nav-chapters {
+    color: #43484d; }
+  .coal .menu-bar i:hover,
+  .coal .nav-chapters:hover,
+  .coal .mobile-nav-chapters i:hover {
+    color: #b3c0cc; }
+  .coal .mobile-nav-chapters i:hover {
+    color: #a1adb8; }
+  .coal .mobile-nav-chapters {
+    background-color: #292c2f; }
+  .coal .content a:link {
+    color: #2b79a2; }
+  .coal .theme-popup {
+    background: #141617;
+    border: 1px solid #43484d; }
+    .coal .theme-popup .theme:hover {
+      background-color: #1f2124; }
+
 .navy {
-/* Inline code */
+  /* Inline code */
   color: #bcbdd0;
-  background-color: #161923;
-}
-.navy :not(pre) > .hljs {
-  display: inline-block;
-  vertical-align: middle;
-  padding: 0.1em 0.3em;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-}
-.navy pre {
-  position: relative;
-}
-.navy pre > i {
-  position: absolute;
-  right: 5px;
-  top: 5px;
-  color: #c8c9db;
-  cursor: pointer;
-}
-.navy pre > i :hover {
-  color: #2b79a2;
-}
-.navy .sidebar {
-  background-color: #282d3f;
-  color: #c8c9db;
-}
-.navy .chapter li {
-  color: #505274;
-}
-.navy .chapter li a {
-  color: #c8c9db;
-}
-.navy .chapter li .active,
-.navy .chapter li a:hover {
-/* Animate color change */
-  color: #2b79a2;
-}
-.navy .chapter .spacer {
-  background-color: #2d334f;
-}
-.navy .menu-bar,
-.navy .nav-chapters,
-.navy .mobile-nav-chapters {
-  color: #737480;
-}
-.navy .menu-bar i:hover,
-.navy .nav-chapters:hover,
-.navy .mobile-nav-chapters i:hover {
-  color: #b7b9cc;
-}
-.navy .mobile-nav-chapters i:hover {
-  color: #c8c9db;
-}
-.navy .mobile-nav-chapters {
-  background-color: #282d3f;
-}
-.navy .content a:link {
-  color: #2b79a2;
-}
-.navy .theme-popup {
-  background: #161923;
-  border: 1px solid #737480;
-}
-.navy .theme-popup .theme:hover {
-  background-color: #282e40;
-}
+  background-color: #161923; }
+  .navy :not(  pre) > .hljs {
+    display: inline-block;
+    vertical-align: middle;
+    padding: 0.1em 0.3em;
+    border-radius: 3px; }
+  .navy pre {
+    position: relative; }
+  .navy pre > i {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    color: #c8c9db;
+    cursor: pointer; }
+    .navy pre > i :hover {
+      color: #2b79a2; }
+  .navy .sidebar {
+    background-color: #282d3f;
+    color: #c8c9db; }
+  .navy .chapter li {
+    color: #505274; }
+    .navy .chapter li a {
+      color: #c8c9db; }
+    .navy .chapter li .active,
+    .navy .chapter li a:hover {
+      /* Animate color change */
+      color: #2b79a2; }
+  .navy .chapter .spacer {
+    background-color: #2d334f; }
+  .navy .menu-bar,
+  .navy .nav-chapters,
+  .navy .mobile-nav-chapters {
+    color: #737480; }
+  .navy .menu-bar i:hover,
+  .navy .nav-chapters:hover,
+  .navy .mobile-nav-chapters i:hover {
+    color: #b7b9cc; }
+  .navy .mobile-nav-chapters i:hover {
+    color: #c8c9db; }
+  .navy .mobile-nav-chapters {
+    background-color: #282d3f; }
+  .navy .content a:link {
+    color: #2b79a2; }
+  .navy .theme-popup {
+    background: #161923;
+    border: 1px solid #737480; }
+    .navy .theme-popup .theme:hover {
+      background-color: #282e40; }
+
 .rust {
-/* Inline code */
+  /* Inline code */
   color: #262625;
-  background-color: #e1e1db;
-}
-.rust :not(pre) > .hljs {
-  display: inline-block;
-  vertical-align: middle;
-  padding: 0.1em 0.3em;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-}
-.rust pre {
-  position: relative;
-}
-.rust pre > i {
-  position: absolute;
-  right: 5px;
-  top: 5px;
-  color: #c8c9db;
-  cursor: pointer;
-}
-.rust pre > i :hover {
-  color: #e69f67;
-}
-.rust .sidebar {
-  background-color: #3b2e2a;
-  color: #c8c9db;
-}
-.rust .chapter li {
-  color: #505254;
-}
-.rust .chapter li a {
-  color: #c8c9db;
-}
-.rust .chapter li .active,
-.rust .chapter li a:hover {
-/* Animate color change */
-  color: #e69f67;
-}
-.rust .chapter .spacer {
-  background-color: #45373a;
-}
-.rust .menu-bar,
-.rust .nav-chapters,
-.rust .mobile-nav-chapters {
-  color: #737480;
-}
-.rust .menu-bar i:hover,
-.rust .nav-chapters:hover,
-.rust .mobile-nav-chapters i:hover {
-  color: #262625;
-}
-.rust .mobile-nav-chapters i:hover {
-  color: #c8c9db;
-}
-.rust .mobile-nav-chapters {
-  background-color: #3b2e2a;
-}
-.rust .content a:link {
-  color: #2b79a2;
-}
-.rust .theme-popup {
-  background: #e1e1db;
-  border: 1px solid #b38f6b;
-}
-.rust .theme-popup .theme:hover {
-  background-color: #99908a;
-}
+  background-color: #e1e1db; }
+  .rust :not(  pre) > .hljs {
+    display: inline-block;
+    vertical-align: middle;
+    padding: 0.1em 0.3em;
+    border-radius: 3px; }
+  .rust pre {
+    position: relative; }
+  .rust pre > i {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    color: #c8c9db;
+    cursor: pointer; }
+    .rust pre > i :hover {
+      color: #e69f67; }
+  .rust .sidebar {
+    background-color: #3b2e2a;
+    color: #c8c9db; }
+  .rust .chapter li {
+    color: #505254; }
+    .rust .chapter li a {
+      color: #c8c9db; }
+    .rust .chapter li .active,
+    .rust .chapter li a:hover {
+      /* Animate color change */
+      color: #e69f67; }
+  .rust .chapter .spacer {
+    background-color: #45373a; }
+  .rust .menu-bar,
+  .rust .nav-chapters,
+  .rust .mobile-nav-chapters {
+    color: #737480; }
+  .rust .menu-bar i:hover,
+  .rust .nav-chapters:hover,
+  .rust .mobile-nav-chapters i:hover {
+    color: #262625; }
+  .rust .mobile-nav-chapters i:hover {
+    color: #c8c9db; }
+  .rust .mobile-nav-chapters {
+    background-color: #3b2e2a; }
+  .rust .content a:link {
+    color: #2b79a2; }
+  .rust .theme-popup {
+    background: #e1e1db;
+    border: 1px solid #b38f6b; }
+    .rust .theme-popup .theme:hover {
+      background-color: #99908a; }
