--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -84,13 +84,13 @@
             </div>
 
             {{#previous}}
-                <a href="{{link}}" class="nav-chapters previous">
+                <a href="{{link}}" class="nav-chapters previous" title="Alt + &larr;">
                     <i class="fa fa-angle-left"></i>
                 </a>
             {{/previous}}
 
             {{#next}}
-                <a href="{{link}}" class="nav-chapters next">
+                <a href="{{link}}" class="nav-chapters next" title="Alt + &rarr;">
                     <i class="fa fa-angle-right"></i>
                 </a>
             {{/next}}
