Revert "Add navigation by keyboard using alt + left/right arrows"

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -84,13 +84,13 @@
             </div>
 
             {{#previous}}
-                <a href="{{link}}" class="nav-chapters previous" title="Alt + &larr;">
+                <a href="{{link}}" class="nav-chapters previous">
                     <i class="fa fa-angle-left"></i>
                 </a>
             {{/previous}}
 
             {{#next}}
-                <a href="{{link}}" class="nav-chapters next" title="Alt + &rarr;">
+                <a href="{{link}}" class="nav-chapters next">
                     <i class="fa fa-angle-right"></i>
                 </a>
             {{/next}}
