Add contributors to the doc + set visisted links to the same color as normal links

--- a/src/theme/stylus/themes/base.styl
+++ b/src/theme/stylus/themes/base.styl
@@ -37,7 +37,7 @@
         a { color: $sidebar-fg }
 
         .active,
-         a:hover {
+         a:hover, {
             /* Animate color change */
             color: $sidebar-active
         }
@@ -67,7 +67,7 @@
         background-color: $sidebar-bg
     }
 
-    .content a:link {
+    .content a:link, a:visited {
         color: $links
     }
 
