Fix bug introduced earlier, where navigation arrows would become blue when visited + make the tooltip on nvigation arrows a little clearer

--- a/src/theme/index.hbs
+++ b/src/theme/index.hbs
@@ -84,13 +84,13 @@
             </div>
 
             {{#previous}}
-                <a href="{{link}}" class="nav-chapters previous" title="&larr;">
+                <a href="{{link}}" class="nav-chapters previous" title="You can navigate through the chapters using the arrow keys">
                     <i class="fa fa-angle-left"></i>
                 </a>
             {{/previous}}
 
             {{#next}}
-                <a href="{{link}}" class="nav-chapters next" title="&rarr;">
+                <a href="{{link}}" class="nav-chapters next" title="You can navigate through the chapters using the arrow keys">
                     <i class="fa fa-angle-right"></i>
                 </a>
             {{/next}}
