--- a/src/theme/stylus/themes/base.styl
+++ b/src/theme/stylus/themes/base.styl
@@ -48,8 +48,11 @@
     }
 
     .menu-bar,
+    .menu-bar:visited,
     .nav-chapters,
-    .mobile-nav-chapters {
+    .nav-chapters:visited,
+    .mobile-nav-chapters,
+    .mobile-nav-chapters:visited {
         color: $icons
     }
 
