Continue #29, playpens are now runnable

--- a/src/theme/stylus/themes/base.styl
+++ b/src/theme/stylus/themes/base.styl
@@ -10,7 +10,7 @@
     pre {
         position: relative;
     }
-    pre > i {
+    pre > .buttons {
         position: absolute;
         right: 5px;
         top: 5px;
@@ -21,6 +21,14 @@
         :hover {
             color: $sidebar-active;
         }
+
+        i {
+            margin-left: 8px;
+        }
+    }
+
+    pre > .result {
+        margin-top: 10px;
     }
 
     color: $fg
