Add href to heading anchors so that the url for the anchor is displayed in the url bar when clicking the header

--- a/src/theme/stylus/general.styl
+++ b/src/theme/stylus/general.styl
@@ -15,6 +15,13 @@ html, body {
     display: none;
 }
 
+a {
+    h1, h2, h3, h4, h5 {
+        color: black;
+        pointer: cursor;
+    }
+}
+
 h2, h3 { margin-top: 2.5em }
 h4, h5 { margin-top: 2em }
 
