--- a/src/theme/stylus/themes/base.styl
+++ b/src/theme/stylus/themes/base.styl
@@ -34,6 +34,15 @@
     color: $fg
     background-color: $bg
 
+    .content .header:link, .content .header:visited {
+        color: $fg;
+        pointer: cursor;
+
+        &:hover {
+            text-decoration: none;
+        }
+    }
+
     .sidebar {
         background-color: $sidebar-bg
         color: $sidebar-fg
