Basic formatting for tables + Styling for blockquotes
Added basic formatting for tables so that they have some padding and are aligned in the center of the page.
I did not add color or borders because I am not sure how tables should look like.

A lot of people in IntermezzOS want asides, blockquotes are probably the easiest way to do that. I have thus styled blockquotes for all the color themes.

--- a/src/theme/stylus/general.styl
+++ b/src/theme/stylus/general.styl
@@ -19,3 +19,10 @@ h2, h3 { margin-top: 2.5em }
 h4, h5 { margin-top: 2em }
 
 .header + .header h3, .header + .header h4, .header + .header h5 { margin-top: 1em }
+
+table {
+    margin: 0 auto;
+
+    thead td { font-weight: 700; }
+    td { padding: 3px 20px; }
+}
