--- a/src/theme/stylus/themes/light.styl
+++ b/src/theme/stylus/themes/light.styl
@@ -18,4 +18,7 @@ $theme-popup-bg = #fafafa
 $theme-popup-border = #cccccc
 $theme-hover = #e6e6e6
 
+$quote-bg = #f2f7f9
+$quote-border = darken($quote-bg, 5%)
+
 @import 'base'
