--- a/src/theme/stylus/themes/navy.styl
+++ b/src/theme/stylus/themes/navy.styl
@@ -18,4 +18,7 @@ $theme-popup-bg = #161923
 $theme-popup-border = #737480
 $theme-hover = #282e40
 
+$quote-bg = #262933
+$quote-border = lighten($quote-bg, 5%)
+
 @import 'base'
