--- a/src/theme/stylus/themes/rust.styl
+++ b/src/theme/stylus/themes/rust.styl
@@ -18,4 +18,7 @@ $theme-popup-bg = #e1e1db
 $theme-popup-border = #b38f6b
 $theme-hover = #99908a
 
+$quote-bg = #c1c1bb
+$quote-border = darken($quote-bg, 5%)
+
 @import 'base'
