--- a/src/theme/stylus/themes/coal.styl
+++ b/src/theme/stylus/themes/coal.styl
@@ -18,4 +18,7 @@ $theme-popup-bg = #141617
 $theme-popup-border = #43484d
 $theme-hover = #1f2124
 
+$quote-bg = #242637
+$quote-border = lighten($quote-bg, 5%)
+
 @import 'base'
